--- a/api/pom.xml
+++ b/api/pom.xml
@@ -167,23 +167,36 @@
 			  <executions>
 			     <!-- Run shade goal on package phase -->
 			    <execution>
-				<phase>package</phase>
-				<goals>
-					<goal>shade</goal>
-				</goals>
-				
-				<configuration>
-					 <createDependencyReducedPom>false</createDependencyReducedPom>
-				  <transformers>
-							<!-- add Main-Class to manifest file -->
-	                    <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-						<mainClass>org.openmrs.module.epts.etl.Main</mainClass>
-					</transformer>
-				  </transformers>
-				</configuration>
+					<phase>package</phase>
+					<goals>
+						<goal>shade</goal>
+					</goals>
+					
+					<configuration>
+						 <createDependencyReducedPom>false</createDependencyReducedPom>
+						  <transformers>
+									<!-- add Main-Class to manifest file -->
+			                    <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+								<mainClass>org.openmrs.module.epts.etl.Main</mainClass>
+							</transformer>
+						  </transformers>
+					</configuration>
 			      </execution>
 			  </executions>
 			</plugin>
+	        <plugin>
+	            <groupId>org.apache.maven.plugins</groupId>
+	            <artifactId>maven-jar-plugin</artifactId>
+	            <version>3.1.0</version> <!-- Use the latest version -->
+	
+	            <configuration>
+	                <excludes>
+	                    <exclude>META-INF/*.SF</exclude>
+	                    <exclude>META-INF/*.RSA</exclude>
+	                    <exclude>META-INF/*.DSA</exclude>
+	                </excludes>
+	            </configuration>
+	        </plugin>			
 		</plugins>
 	</build>
 
