--- a/api/pom.xml
+++ b/api/pom.xml
@@ -180,23 +180,21 @@
 								<mainClass>org.openmrs.module.epts.etl.Main</mainClass>
 							</transformer>
 						  </transformers>
+						<filters>
+				          <filter>
+				            <artifact>*:*</artifact>
+				            <excludes>
+				              <exclude>META-INF/*.SF</exclude>
+				              <exclude>META-INF/*.DSA</exclude>
+				              <exclude>META-INF/*.RSA</exclude>
+				            </excludes>
+				          </filter>
+				        </filters>		  
 					</configuration>
 			      </execution>
 			  </executions>
 			</plugin>
-	        <plugin>
-	            <groupId>org.apache.maven.plugins</groupId>
-	            <artifactId>maven-jar-plugin</artifactId>
-	            <version>3.1.0</version> <!-- Use the latest version -->
-	
-	            <configuration>
-	                <excludes>
-	                    <exclude>META-INF/*.SF</exclude>
-	                    <exclude>META-INF/*.RSA</exclude>
-	                    <exclude>META-INF/*.DSA</exclude>
-	                </excludes>
-	            </configuration>
-	        </plugin>			
+	        
 		</plugins>
 	</build>
 
