Added dependency for slf4j

--- a/api/pom.xml
+++ b/api/pom.xml
@@ -140,7 +140,10 @@
 		    <artifactId>tomcat-jdbc</artifactId>
 		    <version>7.0.35</version>
 		</dependency>
-		
+		<dependency>
+			<groupId>org.slf4j</groupId>
+		    <artifactId>slf4j-api</artifactId>
+		</dependency>		
 	</dependencies>
 	
 	
