--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,12 @@
 				<scope>test</scope>
 			</dependency>
 						
+			<dependency>
+		        <groupId>org.slf4j</groupId>
+		        <artifactId>slf4j-api</artifactId>
+		        <version>1.7.32</version> <!-- Use the latest version available -->
+		    </dependency>
+
 			<!-- End OpenMRS core -->		
 		</dependencies>
 	</dependencyManagement>
