--- a/pom.xml
+++ b/pom.xml
@@ -83,13 +83,13 @@
 				<type>pom</type>
 				<scope>test</scope>
 			</dependency>
-						
+			<!--				
 			<dependency>
 		        <groupId>org.slf4j</groupId>
 		        <artifactId>slf4j-api</artifactId>
-		        <version>1.7.32</version> <!-- Use the latest version available -->
+		        <version>1.7.32</version>
 		    </dependency>
-
+		    -->
 			<!-- End OpenMRS core -->		
 		</dependencies>
 	</dependencyManagement>
