--- a/pom.xml
+++ b/pom.xml
@@ -83,14 +83,25 @@
 				<type>pom</type>
 				<scope>test</scope>
 			</dependency>
-			<!--				
 			<dependency>
 		        <groupId>org.slf4j</groupId>
 		        <artifactId>slf4j-api</artifactId>
 		        <version>1.7.32</version>
 		    </dependency>
-		    -->
-			<!-- End OpenMRS core -->		
+			<!--
+			<dependency>
+			    <groupId>ch.qos.logback</groupId>
+			    <artifactId>logback-core</artifactId>
+			    <version>1.2.3</version>
+			</dependency>
+			-->
+			
+			<dependency>
+			    <groupId>ch.qos.logback</groupId>
+			    <artifactId>logback-classic</artifactId>
+			    <version>1.2.3</version> <!-- Replace with the version you want to use -->
+			</dependency>	
+					
 		</dependencies>
 	</dependencyManagement>
 
