--- a/api/pom.xml
+++ b/api/pom.xml
@@ -112,22 +112,27 @@
 		    <version>7.0.35</version>
 		</dependency>	
 		
-		<!--
-		<dependency>
-		    <groupId>ch.qos.logback</groupId>
-		    <artifactId>logback-core</artifactId>
-		</dependency>
-		-->
-				
-		<dependency>
-			    <groupId>ch.qos.logback</groupId>
-			    <artifactId>logback-classic</artifactId>
-		</dependency>	
-			
-		<dependency>
+		 <dependency>
+	        <groupId>ch.qos.logback</groupId>
+	        <artifactId>logback-classic</artifactId>
+	    </dependency>
+	
+	    <dependency>
 	        <groupId>org.slf4j</groupId>
 	        <artifactId>slf4j-api</artifactId>
 	    </dependency>
+		<!--
+		<dependency>
+	        <groupId>ch.qos.logback</groupId>
+	        <artifactId>logback-classic</artifactId>
+	    </dependency>
+
+		<dependency>
+	        <groupId>org.slf4j</groupId>
+	        <artifactId>slf4j-api</artifactId>
+	        <scope>provided</scope>
+	    </dependency>
+	    -->
 	</dependencies>
 	
 	<build>
