--- a/api/pom.xml
+++ b/api/pom.xml
@@ -27,11 +27,31 @@
 			<groupId>org.openmrs.api</groupId>
 			<artifactId>openmrs-api</artifactId>
 			<type>jar</type>
+		    <exclusions>
+		        <exclusion>
+		            <groupId>org.slf4j</groupId>
+		            <artifactId>slf4j-log4j12</artifactId>
+		        </exclusion>
+			    <exclusion>
+		            <groupId>org.slf4j</groupId>
+		            <artifactId>jcl-over-slf4j</artifactId>
+		        </exclusion>	      
+		    </exclusions>	
 		</dependency>
 				
 		<dependency>
 			<groupId>org.openmrs.api</groupId>
 			<artifactId>openmrs-api</artifactId>
+		    <exclusions>
+		        <exclusion>
+		            <groupId>org.slf4j</groupId>
+		            <artifactId>slf4j-log4j12</artifactId>
+		        </exclusion>
+			    <exclusion>
+		            <groupId>org.slf4j</groupId>
+		            <artifactId>jcl-over-slf4j</artifactId>
+		        </exclusion>	      
+		    </exclusions>				
 			<type>test-jar</type>
 		</dependency>
 		
@@ -121,18 +141,6 @@
 	        <groupId>org.slf4j</groupId>
 	        <artifactId>slf4j-api</artifactId>
 	    </dependency>
-		<!--
-		<dependency>
-	        <groupId>ch.qos.logback</groupId>
-	        <artifactId>logback-classic</artifactId>
-	    </dependency>
-
-		<dependency>
-	        <groupId>org.slf4j</groupId>
-	        <artifactId>slf4j-api</artifactId>
-	        <scope>provided</scope>
-	    </dependency>
-	    -->
 	</dependencies>
 	
 	<build>
