--- a/omod/pom.xml
+++ b/omod/pom.xml
@@ -31,6 +31,12 @@
 		<dependency>
 			<groupId>org.openmrs.api</groupId>
 			<artifactId>openmrs-api</artifactId>
+		    <exclusions>
+		        <exclusion>
+		            <groupId>org.slf4j</groupId>
+		            <artifactId>slf4j-log4j12</artifactId>
+		        </exclusion>
+		    </exclusions>			
 			<type>jar</type>
 		</dependency>
 
@@ -45,6 +51,16 @@
 			<artifactId>openmrs-api</artifactId>
 			<type>test-jar</type>
 			<scope>test</scope>
+		    <exclusions>
+		        <exclusion>
+		            <groupId>org.slf4j</groupId>
+		            <artifactId>slf4j-log4j12</artifactId>
+		        </exclusion>
+			    <exclusion>
+		            <groupId>org.slf4j</groupId>
+		            <artifactId>jcl-over-slf4j</artifactId>
+		        </exclusion>	      
+		    </exclusions>	
 		</dependency>
 
 		<dependency>
