--- a/api/pom.xml
+++ b/api/pom.xml
@@ -145,7 +145,13 @@
 	        <groupId>joda-time</groupId>
 	        <artifactId>joda-time</artifactId>
 	        <version>2.10.10</version>
-	    </dependency>		   
+	    </dependency>	
+	    
+	   <dependency>
+		    <groupId>net.objecthunter</groupId>
+		    <artifactId>exp4j</artifactId>
+		    <version>0.4.8</version>
+		</dependency> 	   
 	</dependencies>
 	
 	<build>
